# map-app

./: .gitignore
map-app/: Cargo.toml
map-app/src/: main.rs
map-app/src/engine/: engine.rs  mod.rs
map-app/src/engine/structure/: character.rs  direction.rs  map.rs  mod.rs  scenario.rs
map-app/src/engine/structure/map/: node.rs
map-app/src/engine/traits/: mod.rs  printable.rs
map-app/src/engine/window/: screen.rs
map-app/src/structure/: scene.rs
map-app/src/window/: screen.rs
map-app/tests/: lib.rs
map-class/: Cargo.toml
map-class/src/: lib.rs
map-class/tests/: lib.rs
