[package]
name = "map-class"
version = "0.1.0"
authors = ["nicooffee <nicolas.honorato@usach.cl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.5"
termion_ext = {git = 'https://github.com/nicooffee/termion-ext'}